--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "practice-for-sprint-15-react-redux-authenticate-me-for-render-deployment",
   "version": "1.0.0",
-  "description": "![image](https://user-images.githubusercontent.com/107587143/232376848-5764c1de-745f-4d39-bb11-395de3b6a2f2.png)",
   "main": "index.js",
   "scripts": {
-    "install": "npm --prefix backend install backend",
+    "render-postbuild": "npm run build --prefix frontend",
+    "install": "npm --prefix backend install backend && npm --prefix frontend install frontend",
     "dev:backend": "npm install --prefix backend start",
     "sequelize": "npm run --prefix backend sequelize",
     "sequelize-cli": "npm run --prefix backend sequelize-cli",
@@ -21,5 +21,6 @@
   "bugs": {
     "url": "https://github.com/Katherin4u/JotIt/issues"
   },
-  "homepage": "https://github.com/Katherin4u/JotIt#readme"
+  "homepage": "https://github.com/Katherin4u/JotIt#readme",
+  "description": ""
 }
