login and signup css basic done

--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "url": "https://github.com/Katherin4u/JotIt/issues"
   },
   "homepage": "https://github.com/Katherin4u/JotIt#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "bootstrap": "^5.2.3",
+    "react-bootstrap": "^2.7.4"
+  }
 }
